feat: add animation

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
     </div>
     <div class="developer">
-      <p>Designed by A.Bahiran</p>
+      <p>Developed by Ashot Bahiran</p>
     </div>
   </body>
 </html>
