--- a/index.html
+++ b/index.html
@@ -20,15 +20,10 @@
       <h1>To Do List</h1>
       <div class="header">
         <input id="currInput" type="input" placeholder="Your new task..." />
-        <button onclick="myFunction()" type="submit" class="btn">Add</button>
+        <button type="submit" class="btn">Add</button>
       </div>
-      <div class="body">
-        <ul id="ul" class="ul">
-          <li>Task number 1</li>
-          <li class="oneTask">Task number 2</li>
-          <li class="oneTask">Task number 3</li>
-          <li>Task number 4</li>
-          <li>Task number 5</li>
+      <div class="body-tasks">
+        <ul id="ulList" class="ul">
         </ul>
       </div>
     </div>
